Wed Nov 24 10:51:51 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/variables.c, libxslt/xsltInternals.h: enhanced the
	  evaluation of global variables to take account of possible
	  changes to the current document (bug 158372).
	  
Mon Nov 22 08:10:18 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: small change to previous fix for bug 153137,
	  fixes bug 158840.
	* tests/general/bug-157.*, tests/general/Makefile.am,
	  tests/docs/bug-157.*, tests/docs/Makefile.am: added test for this

Sun Nov 21 09:42:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: enhanced code to assure the "current
	  template rule" is not changed by xsl:call-template (bug 157859).
	* tests/general/bug-156.*, tests/general/Makefile.am,
	  tests/docs/bug-156.*, tests/docs/Makefile.am: added a test case
	  
Mon Nov  8 11:41:32 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed problem with day-of-week-in-month
	  (bug 157592) with patch from Sal Paradise
	* tests/exslt/date/datetime.1.out: corrected expected output
	  after above fix

Mon Nov  1 15:57:24 CET 2004 Daniel Veillard <daniel@veillard.com>

	* tests/general/bug-155.*, tests/general/Makefile.am,
	  tests/docs/bug-155*, tests/docs/Makefile.am: added a test case
	  provided by Markus Bertheau breaking on libxml2-2.6.15

Fri Oct 29 17:03:26 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* configure.in NEWS doc/*: preparing release of libxslt-1.1.12
	* libexslt/crypto.c: mini change to avoid breaking apibuild.py
	* libxslt/templates.c: small fix, first step in adressing #153660

Fri Oct 29 14:18:35 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* doc/xsltproc.1 doc/xsltproc.xml: indicate - means stdin closing
	  #156626

Wed Oct 27 17:00:54 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: another dictionnary/string interning fix

Wed Oct 27 00:00:07 CEST 2004 Daniel Veillard <daniel@veillard.com>
