@@ -1,0 +1,3 @@
+<site xmlns="http://www.decisionsoft.com/website-layout">
+  <page path="path" /> 
+</site>
