@@ -166,6 +166,7 @@ EXTRA_DIST = \
     bug-156.err bug-156.out bug-156.xsl \
     bug-156.imp1.imp bug-156.imp2.imp \
     bug-157.err bug-157.out bug-157.xsl \
+    bug-158.out bug-158.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
